--- a/discord-ticket-bot/.env.example
+++ b/discord-ticket-bot/.env.example
@@ -1,6 +1,7 @@
 DISCORD_TOKEN=YOUR_BOT_TOKEN
 GUILD_ID=YOUR_GUILD_ID
 SUPPORT_ROLE_ID=OPTIONAL_SUPPORT_ROLE_ID
+SUPPORT_USER_IDS=OPTIONAL_USER_ID_1,OPTIONAL_USER_ID_2
 
 # Category IDs where bot will create channels:
 BUG_CATEGORY_ID=BUG_TICKETS_CATEGORY_ID
